--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "kf",
   "license": "ISC",
   "dependencies": {
     "add-text-to-image": "^1.0.1",
